About and overflow fix

--- a/scss/_about-advisors.scss
+++ b/scss/_about-advisors.scss
@@ -12,26 +12,31 @@ section.about-advisors {
     .container-advisors {
         padding-top: 100px;
         padding-left: 32px;
+
+        .advisor-card {
+            text-transform: uppercase;
+            margin-bottom: 88px;
+            display: block;
+            position: relative;
+        }
+
+        .advisor-card i {
+            visibility: hidden;
+            position: absolute;
+            left: -24px;
+            top: 3px;
+        }
+
+        .advisor-card:hover i {
+            visibility: visible;
+            color: #126efd;
+        }
+
+        .row{
+            margin-right:0px;
+        }
     }
 
-    .advisor-card {
-        text-transform: uppercase;
-        margin-bottom: 88px;
-        display: block;
-        position: relative;
-    }
-
-    .advisor-card i {
-        visibility: hidden;
-        position: absolute;
-        left: -24px;
-        top: 3px;
-    }
-
-    .advisor-card:hover i {
-        visibility: visible;
-        color: #126efd;
-    }
 
     h2 {
         font-size: 38px;
