--- a/scss/_about-masthead.scss
+++ b/scss/_about-masthead.scss
@@ -12,7 +12,7 @@ header.about-masthead {
         width: 100%;
         top: 30px;
         padding: 0 90px;
-
+        margin-left:-15px;
         div {
             display: inline-block;
         }
