--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,13 +4,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Gilroy-Light','GilroyLight','Gilroy Light','Gill Sans Light', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
-    overflow-x: hidden;
-    min-width: 1349px;
-
-    @media (max-width: 1633px) {
-        overflow-x: auto;
-    }
+    color:white;
+    overflow-x:no-content;
 }
 
 a{
