--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -11,6 +11,7 @@ header.masthead {
         width: 100%;
         top: 30px;
         padding: 0 90px;
+        margin-left: -15px;
 
         div {
             display: inline-block;
